# einsum_benchmark

./: .gitignore  LICENSE  README.md  metadata.csv  metadata.xlsx  pyproject.toml
docs/: converters.md  generators.language_model.md  generators.md  generators.quantum_computing.md  generators.random.md  generators.structured.md  meta.md
src/einsum_benchmark/: __init__.py  instances.py  util.py
src/einsum_benchmark/converters/: __init__.py  graphical_model.py  model_counting.py
src/einsum_benchmark/generators/: __init__.py
src/einsum_benchmark/generators/language_model/: __init__.py  architecture.py  generator.py  symbols.py
src/einsum_benchmark/generators/quantum_computing/: __init__.py  maxcut.py  mps_product.py
src/einsum_benchmark/generators/random/: __init__.py  connected_hypernetwork.py  connected_network.py  lattice.py  matrix_chain.py  randreg.py  tree.py  util.py  utils.py
src/einsum_benchmark/generators/structured/: __init__.py  lattice.py  matrix_chain.py  tree.py
src/einsum_benchmark/meta/: __init__.py  info.py  metadata.xlsx  path_finder.py  runtime.py
src/einsum_benchmark/path/: __init__.py  path_finder.py
src/einsum_benchmark/path/con/: alg.cpp  alg.pyx  cpath.h
utils/: gen_metadata_sheet.py
